...
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nanum_gothic_normal"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="parent" />

...
            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nanum_gothic_normal"
                android:text="@string/height_format"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:stepSize="1"
                android:valueFrom="140.0"
                android:valueTo="200.0"
...
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nanum_gothic_normal"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="parent" />

...
            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nanum_gothic_normal"
                android:text="@string/weight_format"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:stepSize="1"
                android:valueFrom="40.0"
                android:valueTo="100.0"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" >

                <RadioButton
                    android:id="@+id/smoker"
                    android:layout_width="wrap_content"
                    android:text="@string/smoker"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/non_smoker"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:textColor="@color/black"
                   android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/non_smoker"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" >

                <RadioButton
                    android:id="@+id/man"
                    android:layout_width="wrap_content"
                    android:text="@string/man"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:checked="true"
                    android:layout_margin="4dp"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/woman"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/woman"
                    android:layout_height="wrap_content"/>
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/save"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/background_button_enabled"
...
